<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#61D0E4ED"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/header"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#051465"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="295dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/mproblem"
        android:textColor="#CD180B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="312dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/instruct"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#452020"
        android:ems="10"
        android:hint="@string/f_input"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/input2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#452020"
        android:ems="10"
        android:hint="@string/s_input"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="+"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/input2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/input1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/input3"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#07C10F"
        android:ems="10"
        android:hint="@string/t_input"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruct2" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/sky_blue"
        android:onClick="onClick"
        android:text="Compute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/instruct2"
        android:layout_width="242dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/instruct2"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>